--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "WordPress Theme using React and WP REST API",
   "main": "index.js",
   "dependencies": {
+    "gulp": "^3.9.0",
+    "browserify": "^10.1.3",
+    "babelify": "^6.1.1",
+    "browser-sync": "^2.7.1",
+    "vinyl-source-stream": "^1.1.0",
     "react": "^0.14.3",
+    "gulp-webserver": "^0.9.1",
     "react-dom": "^0.14.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify --debug --transform babelify app.jsx --outfile bundle.js"
   },
   "author": "",
-  "license": "GPL v3"
+  "license": "GNU GENERAL PUBLIC LICENSE"
 }
